import net.ltgt.gradle.errorprone.CheckSeverity

plugins {
    id 'java'
    id 'application'
    id 'net.ltgt.errorprone'        version '0.8.1'
    id 'com.github.spotbugs'        version '2.0.0'
    id "com.jfrog.bintray"          version '1.8.5'
    id 'nebula.release'             version '15.3.1'
}

group = 'com.pega.gcs'
description = "Pega-TracerViewer"

apply from: "$rootDir/gradle/artifacts.gradle"
apply from: "$rootDir/gradle/jacoco.gradle"
apply from: "$rootDir/gradle/pmd.gradle"
apply from: "$rootDir/gradle/checkstyle.gradle"
apply from: "$rootDir/gradle/spotbugs.gradle"
apply from: "$rootDir/gradle/publishing.gradle"

repositories {
    mavenLocal()
    maven {
        url "https://dl.bintray.com/pegasystems/fringeutils" 
    }
    mavenCentral()
}

dependencies {

    errorprone("com.google.errorprone:error_prone_core:latest.release")
    errorproneJavac("com.google.errorprone:javac:latest.release")

    implementation 'gnu.getopt:java-getopt:1.0.13'

    implementation 'com.pega.gcs:fringeutils-common:3.3.0'

    testImplementation 'junit:junit:4.12'
}

application {
    mainClassName = "com.pega.gcs.tracerviewer.TracerViewer"
    applicationDefaultJvmArgs = ['XXX_SET_USER_DIR_XXX', '-Dfile.encoding=UTF-8', '-Xms512M', '-Xmx1G', '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC']
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:-options']
    options.compilerArgs += ['-proc:none']
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
    // configure error prone
    options.errorprone.check("UnnecessaryParentheses", CheckSeverity.OFF)
}

tasks.withType(Javadoc) {
    failOnError = false
}

tasks.withType (Test) {
    maxParallelForks = 2

    testLogging {
        showStandardStreams = true
        events 'started', 'passed', 'failed'
    }

    jacoco {
        destinationFile = file("$buildDir/jacoco/${name}.exec")
        classDumpDir = file("$buildDir/jacoco/${name}_ClassDump")
    }
}

task copyLicense(type: Copy) {
    from "LICENSE"
    into "$buildDir"
}

// set user.dir to the distribution directory
startScripts {
    doLast {
        unixScript.text = unixScript.text.replace('XXX_SET_USER_DIR_XXX', '-Duser.dir=$APP_HOME')
        windowsScript.text = windowsScript.text.replace('XXX_SET_USER_DIR_XXX', '-Duser.dir=%APP_HOME%')
    }
}

build.finalizedBy jacocoTestReport, jacocoTestCoverageVerification